# GrandRiverAnalytics

./: .env.example  README.md  app.py  build_static.py  netlify.toml  pyproject.toml  render.yaml  tests_smoke.py
static/css/: style.css
static/js/: main.js
templates/: admin_dashboard.html  admin_edit.html  admin_login.html  admin_unavailable.html  base.html  blog_index.html  contact.html  home.html  post.html  team.html
utils/: auth.py  db.py  seo.py
