[tool.poetry]
name = "grand-river-analytics"
version = "0.1.0"
description = "Flask site for equity research posts with admin publishing."
authors = ["Grand River Analytics <research@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
python-dotenv = "^1.0.1"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
